[project]
name = "wctag_history"
version = "0.1.0"
description = "test tag fuction"
authors = [
    {name = "whitecapella1", email = "whitecapella@naver.com"},
]
dependencies = [
    "pandas>=2.2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
print-cnt='wctag_history.tag:cnt'

[tool.pdm]
distribution = false
